# cogniv-vault

./: .gitignore  CONTRIBUTING.md  Cogni-Vault_Project_Bible_v1.md  LICENSE  README.md  package.json  pnpm-lock.yaml
.github/workflows/: ci.yml
backend/: .env.example  Dockerfile  README.md  pyproject.toml  ruff.toml
backend/migrations/: 0001_init.sql  0002_match_chunks.sql
backend/src/cogniv_vault/: config.py  main.py
backend/src/cogniv_vault/agents/: analyst.py  auditor.py  graph.py  job_store.py  librarian.py  prompts.py  runner.py
backend/src/cogniv_vault/api/: documents.py  errors.py  query.py  ws.py
backend/src/cogniv_vault/db/: client.py
backend/src/cogniv_vault/ingestion/: chunking.py  embeddings.py  pdf.py
backend/src/cogniv_vault/llm/: groq_client.py
backend/tests/: conftest.py  test_agents_graph.py  test_chunking.py  test_documents_api.py  test_embeddings.py  test_health.py  test_query_api.py
docs/: API_CONTRACTS.md  ARCHITECTURE.md  DATA_MODEL.md  SESSION_LOG.md
docs/DECISIONS/: 0001-monorepo-pnpm-workspaces.md  0002-python-tooling-uv.md  0003-embedding-model-minilm.md  0004-verification-threshold-0.8.md  0005-groq-model-choice.md
frontend/: README.md  package.json
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/components/: QueryPanel.tsx
frontend/src/game/: PhaserGame.tsx
frontend/src/game/scenes/: BootScene.ts  LibraryScene.ts
frontend/src/hooks/: useAgentSocket.ts
frontend/src/stores/: agentStore.ts
